cmake_minimum_required(VERSION 3.30.0)
project(cpp_learn)
set(CMAKE_CXX_STANDARD 17)
#set(CMAKE_BUILD_TYPE debug)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/out)
add_executable(SeqStack SeqStack.cpp)
add_executable(String String.cpp)
add_executable(Queue Queue.cpp)
add_executable(fuction_template fuction_template.cpp)
add_executable(class_template_stack class_template_stack.cpp)
add_executable(class_template_vector class_template_vector.cpp)
add_executable(complex complex.cpp)
add_executable(new_delete new_delete.cpp)